<resources>
    <string name="app_name">ShoppoGen</string>

    <string name="add_product">Add Product</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="list_data">List All Data</string>
    <string name="go_shopping">Let\'s Go Shopping</string>
    <string name="reset_system">Reset System</string>
    <string name="title_activity_list_data">ListDataActivity</string>

    <string name="update_product_prices">Update Product Prices</string>
    <string name="delete_coupon">Delete Coupon</string>

    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="submit_new_coupon">Add Coupon</string>
    <string name="submit_new_product">Add Product</string>

    <string name="submit_shopping_budget">Generate Shopping List w/ Budget</string>
    <string name="submit_shopping_list">Calculate Best Price w/ Shopping List</string>
</resources>
