<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.keltonkarboviak.shoppogen.MainActivity">

    <Button
            android:id="@+id/btn_add_product"
            android:layout_width="304dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_product"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <Button
            android:id="@+id/btn_add_coupon"
            android:layout_width="304dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_coupon"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_product"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <Button
            android:id="@+id/btn_list_data"
            android:layout_width="304dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:text="@string/list_data"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_coupon"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <Button
            android:id="@+id/btn_shop"
            android:layout_width="304dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:text="@string/go_shopping"
            app:layout_constraintTop_toBottomOf="@+id/btn_list_data"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <Button
            android:id="@+id/btn_reset_system"
            android:layout_width="304dp"
            android:layout_height="71dp"
            android:layout_marginTop="8dp"
            android:text="@string/reset_system"
            app:layout_constraintTop_toBottomOf="@+id/btn_shop"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>
